@@ -7,11 +7,14 @@ This is the Change Log for VDS.Common
 -----
 
 - Extract ITrie interface
+ - Add Contains() and ContainsKey() methods to ITrie
 - Add alternative ITrie implemenations
  - SparseReferenceTrie
  - SparseValueTrie
  - SparseCharacterTrie
  - SparseStringTrie
+- Bug fix to problem where enumerating over a Trie would not reflect latest state of tree
+- Bug fix to logic error in TryGetValue() on Tries
 - Null Keys support for MultiDictionary must now be explicitly configured, mark constructors calls which should be updated as Obsolete
 
 1.1.3
